--- a/Ridge_Lasso_Regression.ipynb
+++ b/Ridge_Lasso_Regression.ipynb
@@ -8,8 +8,7 @@
         "FZU-0t3SBAfY",
         "jxipx8h17KKR"
       ],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOoEVjaS932BMyEV3emq4FU",
+      "authorship_tag": "ABX9TyOwGq4OnaMmazjv5zvHQ+zR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +29,25 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/mehdiabbasidev/darsman-machine-learning/blob/main/Ridge_Lasso_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data set download link:\n",
+        "https://drive.google.com/file/d/1YYUpJx5_xttmji1VEV6XFaSdkaNd8NDf/view?usp=sharing"
+      ],
+      "metadata": {
+        "id": "yi1LpLXct786"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bS14N5G7uE3e"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -79,7 +97,7 @@
       "metadata": {
         "id": "Gox8udd0rM5H"
       },
-      "execution_count": 233,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,7 +144,7 @@
         },
         "outputId": "0ccae2ed-ae27-48c8-c8e3-83f770880464"
       },
-      "execution_count": 263,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +175,7 @@
       "metadata": {
         "id": "IhBcexne06hx"
       },
-      "execution_count": 264,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +198,7 @@
       "metadata": {
         "id": "g9KT_E-HmOZT"
       },
-      "execution_count": 266,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -320,7 +338,7 @@
         },
         "outputId": "f58f17f0-5773-4118-c8a8-0db6fece611c"
       },
-      "execution_count": 279,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -390,7 +408,7 @@
         },
         "outputId": "b82f844f-7045-4b53-bcdf-45ba3ac2af96"
       },
-      "execution_count": 285,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +439,7 @@
         },
         "outputId": "d5deed34-60a4-42a7-9ff9-57d4bb8a7955"
       },
-      "execution_count": 286,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +465,7 @@
         },
         "outputId": "4c2387ba-385a-4005-e4b1-ed5c49bdd8d0"
       },
-      "execution_count": 287,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -478,7 +496,7 @@
         },
         "outputId": "23c41e5e-1de1-452b-a89a-f098f1e2910d"
       },
-      "execution_count": 288,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -509,7 +527,7 @@
         },
         "outputId": "d6168c9b-728f-4204-c1f4-e35d3fbbf3b1"
       },
-      "execution_count": 293,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +570,7 @@
         },
         "outputId": "fd07d292-68b4-437d-a289-1547b7dda394"
       },
-      "execution_count": 295,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,7 +595,7 @@
         },
         "outputId": "45c1199c-6436-417f-c2fe-2020516c115c"
       },
-      "execution_count": 296,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,7 +631,7 @@
         },
         "outputId": "65fb18ca-dada-4783-f501-f57fec9b1844"
       },
-      "execution_count": 303,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
