--- a/Logistic_Regression.ipynb
+++ b/Logistic_Regression.ipynb
@@ -4,10 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "63Fcg1IeklCb"
-      ],
-      "authorship_tag": "ABX9TyOeExTseRPqpyNkNUQXuBmZ",
+      "authorship_tag": "ABX9TyOifd9WVvpMH7hkW4DUVLn+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +25,16 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/mehdiabbasidev/darsman-machine-learning/blob/main/Logistic_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data set download link:\n",
+        "https://drive.google.com/file/d/1Sh9CsWSJjmLiytzHwck7IAyXeCIrbpUm/view?usp=sharing"
+      ],
+      "metadata": {
+        "id": "EcHIN7p8qvW-"
+      }
     },
     {
       "cell_type": "code",
